loose idea of header - happy to re-style it later

--- a/index.html
+++ b/index.html
@@ -30,8 +30,28 @@
       YOU MAY REMOVE THE BOILERPLATE CODE BELOW
 
     -->
+    <header>
+      <div class="header-container">
+         <!-- I thought this logo was just silly and fun but we can 9185981732987% change it later-->
+          <img src="./images/temp logo.jpeg" alt="Logo" class="logo"/>
+        <div class="header-nav">
+          <ul>
+            <li><a href="#"><strong>Home</strong></a></li>
+            <li><a href="#"><strong>The Scoop</strong><br>
+              Chronically Online Drama</a></li>
+            <li><a href="#"><strong>Listen up!</strong><br>
+              Music</a></li>
+            <li><a href="#">Art & Media</a></li>
+            <li><a href="#"><strong>Watch Out...</strong>
+              <br>Movies</a></li>
+            <li><a href="#"><strong>About Us</strong></a></li>
+            <li><a href="#"><strong>Contact Us</strong></a></li>
+          </ul>
+        </div>
+      </div>
+    </header>
     <main>
-      <div id="app"></div>
+      <div id="app" class="page-without-the-header"></div>
     </main>
 
     <!-- This is where we add our awesome JavaScript code -->
