I cant figure out why this grid isnt working??

--- a/index.html
+++ b/index.html
@@ -32,24 +32,40 @@
     -->
     <header>
       <div class="header-container">
+        <div class="logo-and-nav">
          <!-- I thought this logo was just silly and fun but we can 9185981732987% change it later-->
-          <img src="./images/temp logo.jpeg" alt="Logo" class="logo"/>
-        <div class="header-nav">
-          <ul>
-            <li><a href="#"><strong>Home</strong></a></li>
-            <li><a href="#"><strong>The Scoop</strong><br>
-              Chronically Online Drama</a></li>
-            <li><a href="#"><strong>Listen up!</strong><br>
-              Music</a></li>
-            <li><a href="#">Art & Media</a></li>
-            <li><a href="#"><strong>Watch Out...</strong>
-              <br>Movies</a></li>
-            <li><a href="#"><strong>About Us</strong></a></li>
-            <li><a href="#"><strong>Contact Us</strong></a></li>
-          </ul>
+          <img src="./images/temp logo.jpeg" alt="Logo"/>
+          <div class="header-nav">
+            <ul>
+              <li><a href="#"><strong>Home</strong></a></li>
+
+              <li><a href="#"><strong>The Scoop</strong><br>
+                Chronically Online Drama</a></li>
+
+              <li><a href="#"><strong>Listen up!</strong><br>
+                Music</a></li>
+
+              <li><a href="#">Art & Media</a></li>
+
+              <li><a href="#"><strong>Watch Out...</strong>
+                <br>Movies</a></li>
+
+              <li><a href="#"><strong>About Us</strong></a></li>
+
+              <li><a href="#"><strong>Contact Us</strong></a></li>
+            </ul>
+
+          </div>
         </div>
+
+            <div class="bop-or-flop">
+              <h2>Bop or Flop</h2>
+              <p>The stuff we loved the most this week... and the stuff we hated too</p>
+            </div>
       </div>
     </header>
+
+
     <main>
       <div id="app" class="page-without-the-header"></div>
     </main>
