adding pics and organization :)

--- a/index.html
+++ b/index.html
@@ -72,22 +72,29 @@
               </div>
 
  <!-- Noor's Section -->
-            <div class="listen-up">
-              <p></p>
-              <div class="">
+      <div class="listen-up">
+        <h2>Listen Up!</h2>
+        <p>This is Your Weekly Sparkscript Song Roundup</p>
+        
+        <div class="song1">
+          <img src="images/albm (noor)/butterfly.jpeg" alt="butterfly" class="butterfly">
 
-              </div>
-              <div class="">
+        </div>
 
-              </div>
-              <div class="">
+        <div class="song2">
 
-              </div>
-              <div class="">
+        </div>
 
-              </div>
-            </div>
+        <div class="song3">
 
+        </div>
+
+        <div class="song4">
+
+        </div>
+
+      </div>
+      
   <!-- Corinna's Section -->
             <div class="art-and-media">
               <h1>hi alex</h1>
