--- a/index.html
+++ b/index.html
@@ -76,25 +76,37 @@
         <h2>Listen Up!</h2>
         <p>This is Your Weekly Sparkscript Song Roundup</p>
         
-        <div class="song1">
-          <img src="images/albm (noor)/butterfly.jpeg" alt="butterfly" class="butterfly">
+        <div class="reviews">
 
+          <div class="rev1">
+            <img src="images/albm (noor)/butterfly.jpeg" alt="butterfly" class="albm1">
+            <p class="rating">⭐️⭐️⭐️⭐️⭐️</p>
+            <p>song/album review</p>
+
+          </div>
+
+          <div class="rev2">
+            <img src="images/albm (noor)/morale.jpeg" alt="morale" class="albm2">
+            <p class="rating">⭐️⭐️⭐️⭐️⭐️</p>
+            <p>song/album review</p>
+
+          </div>
+
+          <div class="rev3">
+            <img src="images/albm (noor)/panther.jpeg" alt="panther" class="albm3">
+            <p class="rating">⭐️⭐️⭐️⭐️⭐️</p>
+            <p>song/album review</p>
+
+          </div>
+
+          <div class="rev4">
+            <img src="images/albm (noor)/damn.jpeg" alt="damn" class="albm4">
+            <p class="rating">⭐️⭐️⭐️⭐️⭐️</p>
+            <p>song/album review</p>
+          </div>
         </div>
-
-        <div class="song2">
-
-        </div>
-
-        <div class="song3">
-
-        </div>
-
-        <div class="song4">
-
-        </div>
-
       </div>
-      
+
   <!-- Corinna's Section -->
             <div class="art-and-media">
               <h1>hi alex</h1>
