good enough for today

--- a/index.html
+++ b/index.html
@@ -81,28 +81,29 @@
           <div class="rev1">
             <img src="images/albm (noor)/butterfly.jpeg" alt="butterfly" class="albm1">
             <p class="rating">⭐️⭐️⭐️⭐️⭐️</p>
-            <p>song/album review</p>
-
+            <p class="listen-name">song/album name</p>
+            <p class="listen-review">song/album review</p>
           </div>
 
           <div class="rev2">
             <img src="images/albm (noor)/morale.jpeg" alt="morale" class="albm2">
             <p class="rating">⭐️⭐️⭐️⭐️⭐️</p>
-            <p>song/album review</p>
-
+            <p class="listen-name">song/album name</p>
+            <p class="listen-review">song/album review</p>
           </div>
 
           <div class="rev3">
             <img src="images/albm (noor)/panther.jpeg" alt="panther" class="albm3">
             <p class="rating">⭐️⭐️⭐️⭐️⭐️</p>
-            <p>song/album review</p>
-
+            <p class="listen-name">song/album name</p>
+            <p class="listen-review">song/album review</p>
           </div>
 
           <div class="rev4">
             <img src="images/albm (noor)/damn.jpeg" alt="damn" class="albm4">
             <p class="rating">⭐️⭐️⭐️⭐️⭐️</p>
-            <p>song/album review</p>
+            <p class="listen-name">song/album name</p>
+            <p class="listen-review">song/album review</p>
           </div>
         </div>
       </div>
