--- a/index.html
+++ b/index.html
@@ -124,29 +124,38 @@
         <div class="watch-out">
           <div class="watch-out-header">
             <h2>Watch Out...</h2>
-            <p>This Week's Featured Feature Films</p>
+            <p>Check out this week's Featured Feature Films.</p>
           </div>
           <div class="movie-reviews">
             <div class="movie-review1">
             <img src="images/movies (logan)/Ferris_Bueller's_Day_Off.jpg" alt="Ferris Bueller Movie Poster"
-              class="movie-poster1">
+              class="movie-poster">
+              <div class="movie-review-content">
+                <p>⭐️⭐️⭐️⭐️⭐️</p>
             <h3>Ferris Bueller's Day Off</h3>
             <p>1986<br>Directed by John Hughes</p>
-            <a href="#">Read the full review</a>
+            <a href="#" class="full-review">Read the full review</a>
+          </div>
           </div>
           <div class="movie-review2">
-            <img src="images/movies (logan)/Ferris_Bueller's_Day_Off.jpg" alt="Ferris Bueller Movie Poster"
-            class="movie-poster2">
-          <h3>Ferris Bueller's Day Off</h3>
-          <p>1986<br>Directed by John Hughes</p>
-          <a href="#">Read the full review</a>
+            <img src="images/movies (logan)/superbad.jpg" alt="Superbad Movie Poster"
+            class="movie-poster">
+            <div class="movie-review-content">
+              <p>⭐️⭐️⭐️⭐️⭐️</p>
+          <h3>Superbad</h3>
+          <p>2007<br>Directed by Greg Mottola</p>
+          <a href="#" class="full-review">Read the full review</a>
+          </div>
           </div>
           <div class="movie-review3">
-            <img src="images/movies (logan)/Ferris_Bueller's_Day_Off.jpg" alt="Ferris Bueller Movie Poster"
-            class="movie-poster3">
-          <h3>Ferris Bueller's Day Off</h3>
-          <p>1986<br>Directed by John Hughes</p>
-          <a href="#">Read the full review</a>
+            <img src="images/movies (logan)/scottpilgrim.jpg" alt="Scott Pilgrim Movie Poster"
+            class="movie-poster">
+            <div class="movie-review-content">
+              <p>⭐️⭐️⭐️⭐️⭐️</p>
+          <h3>Scott Pilgrim Vs. The World</h3>
+          <p>2010<br>Directed by Edgar Wright</p>
+          <a href="#" class="full-review">Read the full review</a>
+          </div>
           </div>
           </div>
         </div>
