--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <li><a href="#">Art & Media</a></li>
 
-        <li><a href="watchout.html"><strong>Watch Out...</strong>
+        <li><a href="#"><strong>Watch Out...</strong>
             <br>Movies</a></li>
 
         <li><a href="#"><strong>About Us</strong></a></li>
@@ -126,38 +126,111 @@
             <h2>Watch Out...</h2>
             <p>Check out this week's Featured Feature Films.</p>
           </div>
+
           <div class="movie-reviews">
-            <div class="movie-review1">
-            <img src="images/movies (logan)/Ferris_Bueller's_Day_Off.jpg" alt="Ferris Bueller Movie Poster"
-              class="movie-poster">
+            <div class="movie-review">
+              <img src="images/movies (logan)/Ferris_Bueller's_Day_Off.jpg" alt="Ferris Bueller Movie Poster"
+                class="movie-poster">
               <div class="movie-review-content">
                 <p>⭐️⭐️⭐️⭐️⭐️</p>
-            <h3>Ferris Bueller's Day Off</h3>
-            <p>1986<br>Directed by John Hughes</p>
-            <a href="#" class="full-review">Read the full review</a>
+                <h3>Ferris Bueller's Day Off</h3>
+                <p>1986<br>Directed by John Hughes</p>
+                <a href="#" class="full-review">Read the full review</a>
+              </div>
+            </div>
+
+            <div class="movie-review">
+              <img src="images/movies (logan)/superbad.jpg" alt="Superbad Movie Poster" class="movie-poster">
+              <div class="movie-review-content">
+                <p>⭐️⭐️⭐️⭐️⭐️</p>
+                <h3>Superbad</h3>
+                <p>2007<br>Directed by Greg Mottola</p>
+                <a href="#" class="full-review">Read the full review</a>
+              </div>
+            </div>
+
+            <div class="movie-review">
+              <img src="images/movies (logan)/scottpilgrim.jpg" alt="Scott Pilgrim Movie Poster" class="movie-poster">
+              <div class="movie-review-content">
+                <p>⭐️⭐️⭐️⭐️⭐️</p>
+                <h3>Scott Pilgrim Vs. The World</h3>
+                <p>2010<br>Directed by Edgar Wright</p>
+                <a href="#" class="full-review">Read the full review</a>
+              </div>
+            </div>
           </div>
+
+          <div class="ferris-bueller-full-review">
+            <img src="images/movies (logan)/Ferris_Bueller's_Day_Off.jpg" alt="Ferris Bueller Movie Poster"
+              class="large-movie-poster">
+            <div class="review-content-section">
+              <div class="movie-info-section">
+                <h2>Ferris Bueller's Day Off</h2>
+                <p>1986 • Directed by John Hughes</p>
+              </div>
+              <div class="review-main-section">
+                <h3 class="review-main-section-title">Best Movie Ever ⭐️⭐️⭐️⭐️⭐️</h3>
+                <div class="user-info">
+                  <img src="images/movies (logan)/avatar.png" alt="profile pic icon" class="profile-pic-img">
+                  <p>m0vie_luvr
+                  <p>
+                </div>
+                <p class="review-text">
+                  This is my favourite movie to ever exist. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                </p>
+              </div>
+            </div>
+
           </div>
-          <div class="movie-review2">
+
+          <div class="ferris-bueller-full-review">
             <img src="images/movies (logan)/superbad.jpg" alt="Superbad Movie Poster"
-            class="movie-poster">
-            <div class="movie-review-content">
-              <p>⭐️⭐️⭐️⭐️⭐️</p>
-          <h3>Superbad</h3>
-          <p>2007<br>Directed by Greg Mottola</p>
-          <a href="#" class="full-review">Read the full review</a>
+              class="large-movie-poster">
+            <div class="review-content-section">
+              <div class="movie-info-section">
+                <h2>Superbad</h2>
+                <p>2007 • Directed by Greg Mottola</p>
+              </div>
+              <div class="review-main-section">
+                <h3 class="review-main-section-title">A Comedy Classic ⭐️⭐️⭐️⭐️⭐️</h3>
+                <div class="user-info">
+                  <img src="images/movies (logan)/avatar.png" alt="profile pic icon" class="profile-pic-img">
+                  <p>mclovin123
+                  <p>
+                </div>
+                <p class="review-text">
+                  This is my favourite movie to ever exist. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                </p>
+              </div>
+            </div>
+
           </div>
-          </div>
-          <div class="movie-review3">
+
+          <div class="ferris-bueller-full-review">
             <img src="images/movies (logan)/scottpilgrim.jpg" alt="Scott Pilgrim Movie Poster"
-            class="movie-poster">
-            <div class="movie-review-content">
-              <p>⭐️⭐️⭐️⭐️⭐️</p>
-          <h3>Scott Pilgrim Vs. The World</h3>
-          <p>2010<br>Directed by Edgar Wright</p>
-          <a href="#" class="full-review">Read the full review</a>
+              class="large-movie-poster">
+            <div class="review-content-section">
+              <div class="movie-info-section">
+                <h2>Scott Pilgrim Vs. The World</h2>
+                <p>2010 • Directed by Edgar Wright</p>
+              </div>
+              <div class="review-main-section">
+                <h3 class="review-main-section-title">Michael Cera Is My King ⭐️⭐️⭐️⭐️⭐️</h3>
+                <div class="user-info">
+                  <img src="images/movies (logan)/avatar.png" alt="profile pic icon" class="profile-pic-img">
+                  <p>iheartmichaelcera
+                  <p>
+                </div>
+                <p class="review-text">
+                  This is my favourite movie to ever exist. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                </p>
+              </div>
+            </div>
+
           </div>
-          </div>
-          </div>
+
+
+
         </div>
 
 
