--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <p>⭐️⭐️⭐️⭐️⭐️</p>
                 <h3>Ferris Bueller's Day Off</h3>
                 <p>1986<br>Directed by John Hughes</p>
-                <a href="#ferrisbueller" class="full-review-link">Read the full review</a>
+                <a href="#ferrisbueller" class="full-review-link">Read the full review ➜</a>
               </div>
             </div>
 
@@ -145,7 +145,7 @@
                 <p>⭐️⭐️⭐️⭐️⭐️</p>
                 <h3>Superbad</h3>
                 <p>2007<br>Directed by Greg Mottola</p>
-                <a href="#superbad" class="full-review-link">Read the full review</a>
+                <a href="#superbad" class="full-review-link">Read the full review ➜</a>
               </div>
             </div>
 
@@ -155,7 +155,7 @@
                 <p>⭐️⭐️⭐️⭐️⭐️</p>
                 <h3>Scott Pilgrim Vs. The World</h3>
                 <p>2010<br>Directed by Edgar Wright</p>
-                <a href="#scottpilgrim" class="full-review-link">Read the full review</a>
+                <a href="#scottpilgrim" class="full-review-link">Read the full review ➜</a>
               </div>
             </div>
           </div>
@@ -169,18 +169,14 @@
                   <p>1986 • Directed by John Hughes</p>
                 </div>
                 <div class="review-post-section">
-                  <h3 class="review-title">Best Movie Ever ⭐️⭐️⭐️⭐️⭐️</h3>
+                  <h3 class="review-title">Top-Tier Shenanigans ⭐️⭐️⭐️⭐️⭐️</h3>
                   <div class="user-info">
                     <img src="images/movies (logan)/avatar.png" alt="profile pic icon" class="profile-pic-img">
                     <p>m0vie_luvr
                     <p>
                   </div>
                   <p class="review-text">
-                    This is my favourite movie to ever exist. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed
-                    do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    "Ferris Bueller's Day Off" is the kind of movie that makes you wish you could go back in time, skip school, and embark on a day-long adventure of unparalleled mischief. The film is a classic teenage rebellion story, and it's safe to say Ferris Bueller is the hero we all wish we had the guts to be (and the principal we wish we could outsmart).
                   </p>
                 </div>
               </div>
@@ -195,19 +191,14 @@
                   <p>2007 • Directed by Greg Mottola</p>
                 </div>
                 <div class="review-post-section">
-                  <h3 class="review-title">A Comedy Classic ⭐️⭐️⭐️⭐️⭐️</h3>
+                  <h3 class="review-title">SuperGOOD ⭐️⭐️⭐️⭐️⭐️</h3>
                   <div class="user-info">
                     <img src="images/movies (logan)/avatar.png" alt="profile pic icon" class="profile-pic-img">
                     <p>mclovin123
                     <p>
                   </div>
                   <p class="review-text">
-                    This is my favourite movie to ever exist. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed
-                    do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                  </p>
+                    What elevates "Superbad" beyond the typical teen comedy is its keen understanding of the human experience beneath the layers of absurdity. Beneath the copious amounts of alcohol and teenage angst, there's a poignant exploration of friendship, self-discovery, and the bittersweet realization that high school, like all good things, must come to an end.</p>
                 </div>
               </div>
 
@@ -229,11 +220,7 @@
                     <p>
                   </div>
                   <p class="review-text">
-                    This is my favourite movie to ever exist. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed
-                    do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Ah, Michael Cera, the man who has the uncanny ability to make awkwardness look like a fine art. If I had a nickel for every time I laughed until I snorted at his signature stammer and wide-eyed expressions, I'd probably have enough money to hire him for my birthday party (note to self: check Michael Cera's availability for birthday parties).
                   </p>
                 </div>
               </div>
