added images for my content section - the scoop

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
     <div class="bottom-block">
       <div class="bop-or-flop">
         <h2>Bop or Flop</h2>
-        <p>The stuff we loved the most this week... and the stuff we hated too</p>
       </div>
     </div>
 
@@ -70,7 +69,8 @@
 
       <!-- Alex's Section -->
       <div class="the-scoop">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum temporibus harum facilis esse!</p>
+        <h2>The Scoop</h2>
+        <p>All of the chronically online drama you may have missed this week.</p>
       </div>
 
       <!-- Noor's Section -->
@@ -112,7 +112,7 @@
 
       <!-- Corinna's Section -->
       <div class="art-and-media">
-        <h1>hi alex</h1>
+        <h1>Art & Media</h1>
         <div class="">
           <p>hehe</p>
           <div class="">
