titles and images on my content section(alex)

--- a/index.html
+++ b/index.html
@@ -69,9 +69,35 @@
 
       <!-- Alex's Section -->
       <div class="the-scoop">
-        <h2>The Scoop</h2>
-        <p>All of the chronically online drama you may have missed this week.</p>
-      </div>
+
+        <div class="the-scoop-intro">
+          <h2>The Scoop</h2>
+          <p>All of the chronically online drama you may have missed this week.</p>
+        </div>
+
+        <div class="the-scoop-content">
+
+          <div class="the-scoop-content">
+                <div class="the-scoop-content-title">
+                  <h3>Who is/are the internet's latest hero(s), and villain(s) now?
+                    <br>According to our team here at Bop or Flop.</h3>
+                </div>
+
+                <div class="the-scoop-content-main">
+                  <h4>Introducing our charachters this week</h4>
+
+                    <div class="jacksfilms">
+                      <h5 class="jacksfilms-into-title">Meet our hero, Jacksfilms</h5>
+                      <img src="images/the scoop(alex)/jacksfilms.png" />
+                    </div>
+
+                    <div class="ssniperwolf">
+                      <h5 class="ssniperwolf-into-title">Meet our villain, ssniperwolf</h5>
+                      <img src="images/the scoop(alex)/ssniperwolf.png" />
+                    </div>
+                </div> 
+
+       </div>
 
       <!-- Noor's Section -->
       <div class="listen-up">
