--- a/index.html
+++ b/index.html
@@ -2,34 +2,27 @@
 <html lang="en">
 
 <head>
-  <!-- Set the page title -->
-  <title>Group Project</title>
-
-  <!-- Set the charset we're using to UTF-8 -->
+  <title>Bop or Flop</title>
   <meta charset="UTF-8" />
-
-  <!-- Set the screens default zoom / scale to 1 -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <!-- Specifies the document mode for Internet Explorer -->
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
-  <!-- We are using a CSS Reset file to standardize browser default css -->
   <link rel="stylesheet" href="./reset.css" />
-
-  <!-- This is where all of our awesome CSS code goes -->
   <link rel="stylesheet" href="./style.css" />
-
-  <!-- Set the Favicon  -->
+  <!-- CHANGE FAVICON -->
   <link rel="icon" href="./images/favicon/rocket.svg" type="image/svg+xml" />
 </head>
 
+
+
+
+
 <body>
   <!-- <header> -->
+    <header>
   <div class="header-grid">
 
     <div class="top-block">
-      <img src="./images/temp logo.jpeg" alt="Logo" class="top-block-logo" />
+      <img src="./images/temp-logo.jpeg" alt="Logo" class="top-block-logo" />
 
       <ul class="page-nav">
         <li><a href="#"><strong>Home</strong></a></li>
@@ -59,16 +52,28 @@
 
   </div>
   <!-- </header> -->
-  </div>
   </header>
+
+
+
 
 
   <main>
     <div id="app" class="page-without-the-header"></div>
+
+
+
+
+
     <div class="all-content-sections">
+
+
+
+
 
 <!-- Alex's Section -->
       <div class="the-scoop">
+
 
         <div class="the-scoop-intro">
           <h2 class="the-scoop-heading-styling">The Scoop</h2>
@@ -86,25 +91,26 @@
                 <div class="the-scoop-content-main">
                   <h4 class="TS-content-main-heading-styling">Introducing our charachters this week</h4>
 
+                  <div class="j-and-ss">
                     <div class="jacksfilms">
                         <h5 class="jacksfilms-into-title">Meet our hero, jacksfilms</h5>
-                        <img src="images/the scoop(alex)/jacksfilms.png" class="jackfilms-pic"/>
+                        <img src="images/the-scoop(alex)/jacksfilms.png" class="jackfilms-pic" alt="image of the creator jacksfilms"/>
 
                         <p class="jacksfilms-about"><strong>Who is jacksfilms?</strong><br>
                         
                           jacksfilms (he doesn't capitalise his channel name) is known for comedy and parody videos, he has 4.97 subscribers on YouTube and 1.2 million followers on Twitter. He has a net worth of $2 million, according to Celebrity Net Worth.</p>
-                        </p>
                     </div>
 
                     <div class="ssniperwolf">
                       <h5 class="ssniperwolf-into-title">Meet our villain, ssniperwolf</h5>
-                      <img src="images/the scoop(alex)/ssniperwolf.png" class="ssniperwolf-pic"/>
+                      <img src="images/the-scoop(alex)/ssniperwolf.png" class="ssniperwolf-pic" alt="image of the creator SSniperwolf"/>
 
                       <p class="ssniperwolf-about"><strong>Who is SSniperwolf?</strong><br>
                       
                         SSSniperwolf has been creating content on YouTube for a decade, having pivoted from gaming to reaction videos, now known for reacting to TikTok clips. She has 24.5 million subscribers on YouTube and 5.5 million followers on Twitch. She also has a second channel, Little Lia, which has 4.5 million subscribers. She has a net worth of $8 million, according to Celebrity Net Worth.
                       </p>
                     </div>
+                  </div>
 
                         <div class="the-scoop-content-the story">
                             <h6 class="TS-story-title">What's the scoop?</h6>
@@ -129,12 +135,14 @@
                               </p>
 
                               <p>
-                                The fued continued with SSniperwolf 'joking' that she was      going to file a restraining order against jacksfilms because of all of the videos he makes about hers.jacksfilms was quick to point out the hipoccracy in this stating: 
+                                The fued continued with SSniperwolf 'joking' that she was      going to file a restraining order against jacksfilms because of all of the videos he makes about hers.jacksfilms was quick to point out the hipoccracy in this stating:
+                              </p> 
 
                                 <p class="the-scoop-quote-indent">
                                   “The 'harassing' you claim I've been doing is documenting recent examples of you stealing creators' content, stealing jokes, and failing to provide transformative commentary.”
                                 </p>
 
+                               <p>
                                 Jack then pushed back against her “restraining order” comment by pointing out that “one of us showed up to the other's house tonight...and it wasn't me.”
                               </p>
                         </div>
@@ -145,9 +153,14 @@
                           </p>
                         </div>
                 </div> 
+           </div>
+
 
        </div>
  <!-- End of Alex's Section -->
+
+
+
 
 
       <!-- Noor's Section -->
@@ -187,6 +200,10 @@
         </div>
       </div>
 
+
+
+
+
       <!-- Corinna's Section -->
       <div class="art-and-media">
         <h1>Art & Media</h1>
@@ -195,6 +212,10 @@
           <div class="">
           </div>
         </div>
+      </div>
+
+
+
 
 
         <!-- Logan's Section -->
@@ -307,8 +328,13 @@
           </div>
 
         </div>
+<!-- end of Logan's section -->
 
 
+
+
+
+<!-- closing tag to close div for all content sections -->
       </div>
 
       <div class="bottom-section">
@@ -324,6 +350,26 @@
 
       </div>
   </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   <footer>
     <div class="footer-styling">
