--- a/index.html
+++ b/index.html
@@ -75,23 +75,24 @@
       <div class="the-scoop">
 
 
-        <div class="the-scoop-intro">
+        <div class="TS-S1">
           <h2 class="the-scoop-heading-styling">The Scoop</h2>
             <p class="the-scoop-heading-subtitle">All of the chronically online drama you may have missed this week.</p>
         </div>
 
 
 
-          <div class="the-scoop-content">
-                <div class="the-scoop-content-title">
+                <div class="TS-S2">
                   <h3 class="the-scoop-content-heading-styling">Who is/are the internet's latest hero(s), and villain(s) now?
                     <br>According to our team here at Bop or Flop.</h3>
                 </div>
 
                 <div class="the-scoop-content-main">
-                  <h4 class="TS-content-main-heading-styling">Introducing our charachters this week</h4>
+                  <div class="TS-S3">
+                  <h4>Introducing our charachters this week</h4>
+                  </div>
 
-                    <div class="jacksfilms">
+                    <div class="TS-S4-L">
                         <h5 class="jacksfilms-into-title">Meet our hero, jacksfilms</h5>
                         <img src="images/the-scoop(alex)/jacksfilms.png" class="jackfilms-pic" alt="image of the creator jacksfilms"/>
 
@@ -100,7 +101,7 @@
                           jacksfilms (he doesn't capitalise his channel name) is known for comedy and parody videos, he has 4.97 subscribers on YouTube and 1.2 million followers on Twitter. He has a net worth of $2 million, according to Celebrity Net Worth.</p>
                     </div>
 
-                    <div class="ssniperwolf">
+                    <div class="TS-S4-R">
                       <h5 class="ssniperwolf-into-title">Meet our villain, ssniperwolf</h5>
                       <img src="images/the-scoop(alex)/ssniperwolf.png" class="ssniperwolf-pic" alt="image of the creator SSniperwolf"/>
 
@@ -109,8 +110,9 @@
                         SSSniperwolf has been creating content on YouTube for a decade, having pivoted from gaming to reaction videos, now known for reacting to TikTok clips. She has 24.5 million subscribers on YouTube and 5.5 million followers on Twitch. She also has a second channel, Little Lia, which has 4.5 million subscribers. She has a net worth of $8 million, according to Celebrity Net Worth.
                       </p>
                     </div>
+                  </div>
 
-                        <div class="the-scoop-content-the story">
+                         <div class="TS-S5">
                             <h6 class="TS-story-title">What's the scoop?</h6>
                               <p>
                                 jacksfilms has been highly critical of SSSniperwolf's reaction videos in the past. He has accused her of creating low-effort content by stealing ideas from TikTok creators, without proper credit or acknowledgment.
@@ -143,14 +145,12 @@
                                <p>
                                 Jack then pushed back against her “restraining order” comment by pointing out that “one of us showed up to the other's house tonight...and it wasn't me.”
                               </p>
-                        </div>
+                            </div>
 
-                        <div class="the-scoop-conclusion">
-                          <p>
+                          <p class="TS-S6">
                             As usual, we're pretty opinionated over here at Bop or Flop and we have some thoughts on this whole situation. I think, categorically, there's no other takeaway from this whole situation other than the fact that SSniperwolf is <strong>clearly</strong> in her <strong>Flop era</strong> here. It's not a good look to doxx someone, especially when you have such a large platform and you know that your fans will do anything for you. It's dangerous and it's irresponsible. It feels awkwrd to say jacksfilms here is in his <strong>Bop era</strong> here, but the team here at Bop or Flop hope he is able to feel safe and comfortable in his own home going forth.
                           </p>
-                        </div>
-                </div> 
+                 
            </div>
 
 
