a bit of styling not a lot lol

--- a/index.html
+++ b/index.html
@@ -169,30 +169,34 @@
         <div class="reviews">
 
           <div class="rev1">
-            <img src="images/albm (noor)/butterfly.jpeg" alt="butterfly" class="albm1">
+            <img src="images/albm(noor)/butterfly.jpeg" alt="butterfly" class="albm1">
             <p class="rating">⭐️⭐️⭐️⭐️⭐️</p>
-            <p class="listen-name">song/album name</p>
+            <h3 class="listen-name">song/album name</h3>
+            <p class="Listen-author">by author</p>
             <p class="listen-review">song/album review</p>
           </div>
 
           <div class="rev2">
-            <img src="images/albm (noor)/morale.jpeg" alt="morale" class="albm2">
+            <img src="images/albm(noor)/morale.jpeg" alt="morale" class="albm2">
             <p class="rating">⭐️⭐️⭐️⭐️⭐️</p>
-            <p class="listen-name">song/album name</p>
+            <h3 class="listen-name">song/album name</h3>
+            <p class="Listen-author">by author</p>
             <p class="listen-review">song/album review</p>
           </div>
 
           <div class="rev3">
-            <img src="images/albm (noor)/panther.jpeg" alt="panther" class="albm3">
+            <img src="images/albm(noor)/panther.jpeg" alt="panther" class="albm3">
             <p class="rating">⭐️⭐️⭐️⭐️⭐️</p>
-            <p class="listen-name">song/album name</p>
+            <h3 class="listen-name">song/album name</h3>
+            <p class="Listen-author">by author</p>
             <p class="listen-review">song/album review</p>
           </div>
 
           <div class="rev4">
-            <img src="images/albm (noor)/damn.jpeg" alt="damn" class="albm4">
+            <img src="images/albm(noor)/damn.jpeg" alt="damn" class="albm4">
             <p class="rating">⭐️⭐️⭐️⭐️⭐️</p>
-            <p class="listen-name">song/album name</p>
+            <h3 class="listen-name">song/album name</h3>
+            <p class="Listen-author">by author</p>
             <p class="listen-review">song/album review</p>
           </div>
         </div>
