yo its 4 am what im not tired

--- a/index.html
+++ b/index.html
@@ -164,39 +164,39 @@
       <!-- Noor's Section -->
       <div class="listen-up">
         <h2>Listen Up!</h2>
-        <p>This is Your Weekly Sparkscript Song Roundup</p>
+        <p class="listen-headline">This is Your Weekly Sparkscript Song Roundup</p>
 
         <div class="reviews">
 
           <div class="rev1">
-            <img src="images/albm(noor)/butterfly.jpeg" alt="butterfly" class="albm1">
+            <img src="images/albm(noor)/melodic.jpeg" alt="family ties by kendrick lamar album cover" class="albm1">
             <p class="rating">⭐️⭐️⭐️⭐️⭐️</p>
-            <h3 class="listen-name">song/album name</h3>
-            <p class="Listen-author">by author</p>
+            <h3 class="listen-name">Family Ties</h3>
+            <p class="listen-author">by Kendrick Lamar and Baby Keem</p>
             <p class="listen-review">song/album review</p>
           </div>
 
           <div class="rev2">
-            <img src="images/albm(noor)/morale.jpeg" alt="morale" class="albm2">
+            <img src="images/albm(noor)/getaway.jpeg" alt="getaway car by taylor swift album cover" class="albm2">
             <p class="rating">⭐️⭐️⭐️⭐️⭐️</p>
-            <h3 class="listen-name">song/album name</h3>
-            <p class="Listen-author">by author</p>
+            <h3 class="listen-name">Getaway Car</h3>
+            <p class="listen-author">by Taylor Swift</p>
             <p class="listen-review">song/album review</p>
           </div>
 
           <div class="rev3">
-            <img src="images/albm(noor)/panther.jpeg" alt="panther" class="albm3">
+            <img src="images/albm(noor)/louise.jpeg" alt="louise by tv girl album cover" class="albm3">
             <p class="rating">⭐️⭐️⭐️⭐️⭐️</p>
-            <h3 class="listen-name">song/album name</h3>
-            <p class="Listen-author">by author</p>
+            <h3 class="listen-name">Louise</h3>
+            <p class="listen-author">by TV Girl</p>
             <p class="listen-review">song/album review</p>
           </div>
 
           <div class="rev4">
-            <img src="images/albm(noor)/damn.jpeg" alt="damn" class="albm4">
+            <img src="images/albm(noor)/myhouse.jpeg" alt="my house by beyoncé album cover" class="albm4">
             <p class="rating">⭐️⭐️⭐️⭐️⭐️</p>
-            <h3 class="listen-name">song/album name</h3>
-            <p class="Listen-author">by author</p>
+            <h3 class="listen-name">My House</h3>
+            <p class="listen-author">by Beyoncé</p>
             <p class="listen-review">song/album review</p>
           </div>
         </div>
