--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
           <div class="rev1">
             <img src="images/albm(noor)/melodic.jpeg" alt="family ties by kendrick lamar album cover" class="albm1">
             <p class="rating">⭐️⭐️⭐️⭐️⭐️</p>
-            <h3 class="listen-name">Family Ties</h3>
-            <p class="listen-author">by Kendrick Lamar and Baby Keem</p>
+            <h3 class="listen-name">16</h3>
+            <p class="listen-author">by Baby Keem</p>
             <p class="listen-review">song/album review</p>
           </div>
 
