ok im gon slep nw i promis

--- a/index.html
+++ b/index.html
@@ -171,33 +171,33 @@
           <div class="rev1">
             <img src="images/albm(noor)/melodic.jpeg" alt="family ties by kendrick lamar album cover" class="albm1">
             <p class="rating">⭐️⭐️⭐️⭐️⭐️</p>
-            <h3 class="listen-name">16</h3>
-            <p class="listen-author">by Baby Keem</p>
-            <p class="listen-review">song/album review</p>
+            <h3 class="listen-name">"16"</h3>
+            <p class="listen-author">by Baby Keem - Hip-Hop/rap</Hip-Hop></p>
+            <p class="listen-review">The song "16" by Baby Keem explores the theme of navigating modern society and adulthood. It encourages listeners to embrace their true selves and value their worth, challenging the pressures of the world that can make us feel like we have to hide our flaws to fit in. The song emphasizes the importance of self-honesty, looking inward for validation, and making decisions based on our own beliefs rather than seeking external validation. It serves as a reminder that it is never too late to make changes and that our own decisions are what truly matter.</p>
           </div>
 
           <div class="rev2">
             <img src="images/albm(noor)/getaway.jpeg" alt="getaway car by taylor swift album cover" class="albm2">
             <p class="rating">⭐️⭐️⭐️⭐️⭐️</p>
-            <h3 class="listen-name">Getaway Car</h3>
-            <p class="listen-author">by Taylor Swift</p>
-            <p class="listen-review">song/album review</p>
+            <h3 class="listen-name">"Getaway Car"</h3>
+            <p class="listen-author">by Taylor Swift - Synth-pop</p>
+            <p class="listen-review">"Getaway Car" by Taylor Swift is a song that explores the challenges of escaping a toxic relationship. The lyrics depict a couple who initially have high hopes for their romance, but quickly find themselves trapped in a destructive cycle. The chorus uses the metaphor of a "getaway car" to symbolize the illusion of a romantic escape that ultimately leads nowhere. In the bridge, Swift reveals that she has turned against her former partner, ultimately racing away from the relationship alone. The song conveys a bittersweet message about the complexities of love and the impact of past experiences.</p>
           </div>
 
           <div class="rev3">
             <img src="images/albm(noor)/louise.jpeg" alt="louise by tv girl album cover" class="albm3">
             <p class="rating">⭐️⭐️⭐️⭐️⭐️</p>
-            <h3 class="listen-name">Louise</h3>
-            <p class="listen-author">by TV Girl</p>
-            <p class="listen-review">song/album review</p>
+            <h3 class="listen-name">"Louise"</h3>
+            <p class="listen-author">by TV Girl - Indie-pop</p>
+            <p class="listen-review">"Louise" by TV Girl is a song that tells the story of a woman named Louise who is searching for love and friendship, but struggles to find it. The lyrics suggest that Louise has made mistakes in the past and finds it difficult to connect with others. The song portrays a character who longs for connection but faces social isolation and misunderstandings.</p>
           </div>
 
           <div class="rev4">
             <img src="images/albm(noor)/myhouse.jpeg" alt="my house by beyoncé album cover" class="albm4">
             <p class="rating">⭐️⭐️⭐️⭐️⭐️</p>
-            <h3 class="listen-name">My House</h3>
-            <p class="listen-author">by Beyoncé</p>
-            <p class="listen-review">song/album review</p>
+            <h3 class="listen-name">"MY HOUSE"</h3>
+            <p class="listen-author">by Beyoncé - Electronic-Pop</p>
+            <p class="listen-review">The song "MY HOUSE" by Beyoncé is about power, confidence, and self-love. Beyoncé emphasizes the idea of owning one's space, both figuratively and literally. The lyrics showcase her dominance, luxurious lifestyle, and unwavering confidence in the face of negativity or challenges. The song reflects on her journey to success, encourages self-love and healing, and calls for positive change in the world.</p>
           </div>
         </div>
       </div>
