--- a/index.html
+++ b/index.html
@@ -87,13 +87,10 @@
                     <br>According to our team here at Bop or Flop.</h3>
                 </div>
 
-                <div class="the-scoop-content-main">
-                  <div class="TS-S3">
-                  <h4>Introducing our charachters this week</h4>
-                  </div>
+                  <h4 class="TS-S3">Introducing our charachters this week</h4>
 
                     <div class="TS-S4-L">
-                        <h5 class="jacksfilms-into-title">Meet our hero, jacksfilms</h5>
+                        <h5>Meet our hero, jacksfilms</h5>
                         <img src="images/the-scoop(alex)/jacksfilms.png" class="jackfilms-pic" alt="image of the creator jacksfilms"/>
 
                         <p class="jacksfilms-about"><strong>Who is jacksfilms?</strong><br>
@@ -102,7 +99,7 @@
                     </div>
 
                     <div class="TS-S4-R">
-                      <h5 class="ssniperwolf-into-title">Meet our villain, ssniperwolf</h5>
+                      <h5>Meet our villain, ssniperwolf</h5>
                       <img src="images/the-scoop(alex)/ssniperwolf.png" class="ssniperwolf-pic" alt="image of the creator SSniperwolf"/>
 
                       <p class="ssniperwolf-about"><strong>Who is SSniperwolf?</strong><br>
@@ -110,7 +107,6 @@
                         SSSniperwolf has been creating content on YouTube for a decade, having pivoted from gaming to reaction videos, now known for reacting to TikTok clips. She has 24.5 million subscribers on YouTube and 5.5 million followers on Twitch. She also has a second channel, Little Lia, which has 4.5 million subscribers. She has a net worth of $8 million, according to Celebrity Net Worth.
                       </p>
                     </div>
-                  </div>
 
                          <div class="TS-S5">
                             <h6 class="TS-story-title">What's the scoop?</h6>
